# aether-wristband

./: .gitignore  .gitmodules  Cargo.toml  README.md  cfg.toml.example
.cargo/: config.toml
src/: analysis.rs  config.rs  control.rs  imu_tracker.rs  main.rs
