[package]
name = "test-xtensa-nostd"
version = "0.1.0"
authors = ["Luis Linares <linares.luis@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [
    "esp32s3",
    "embassy-futures", "embassy-sync", "async",
    "embedded-io", "embedded-io-async", "embedded-hal"
] }
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }

esp-hal-embassy = { version = "0.2.0", features = ["esp32s3", "log", "integrated-timers"] }
embassy-executor    = { version = "0.5.0", features = ["nightly"] }
embassy-embedded-hal = "0.1.0"
embassy-futures     = "0.1.1"
embassy-sync        = "0.6.0"
embassy-time        = "0.3.1"
embassy-time-driver = { version = "0.1.0" }
embedded-hal        = "1.0.0"
embedded-hal-async  = "1.0.0"
embedded-hal-bus    = "0.2.0"
embedded-io         = { version = "0.6.1" }
embedded-io-async   = "0.6.1"

embassy-net = { version = "0.4.0", features = ["dhcpv4", "proto-ipv4", "tcp", "udp", "log", "dns", "medium-ethernet"] }
esp-wifi = { version = "0.7.1", features = [
    "esp32s3",
    "wifi",
    "phy-enable-usb", # This is CRITICAL in order to not break USB functions
    "ps-max-modem",   # These are sleep modes. If not enabled, power dissipation skyrockets!
    #"ps-min-modem",  # They are mutually exclusive. min is to sleep
    "wifi-default",   # Brings common protocols such as tcp, udp, dns, dhcp
    "embassy-net", "async",
    "log",
]}
rust-mqtt = { version = "0.3.0", default-features = false }
toml-cfg = "0.2.0"

icm20948-async = { git = "https://github.com/peterkrull/icm20948-async" }
circular-buffer = { version = "0.1", default-features = false }
micromath = "2.1.0"
imu-fusion = "0.2.4"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
