[package]
name = "test-xtensa-nostd"
version = "0.1.0"
authors = ["Luis Linares <linares.luis@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3", "defmt",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "0.19.0", features = [
    "esp32s3", "defmt",
    "embassy-futures", "embassy-sync", "async",
    "embedded-io", "embedded-io-async", "embedded-hal"
] }
esp-println = { version = "0.10.0", features = ["esp32s3", "defmt-espflash"] }
defmt = { version = "0.3.8" }
esp-alloc = { version = "0.4.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }

esp-hal-embassy = { version = "0.2.0", features = ["esp32s3", "defmt", "integrated-timers"] }
embassy-executor     = { version = "0.5.0", features = ["nightly", "executor-interrupt", "executor-thread", "integrated-timers"] }
embassy-embedded-hal = { version = "0.2.0" }
embassy-futures      = { version = "0.1.1" }
embassy-sync         = { version = "0.6.0" }
embassy-time         = { version = "0.3.1" }
embassy-time-driver  = { version = "0.1.0" }
embedded-hal         = { version = "1.0.0" }
embedded-hal-async   = { version = "1.0.0" }
embedded-hal-bus     = { version = "0.2.0" }
embedded-io          = { version = "0.6.1" }
embedded-io-async    = { version = "0.6.1" }

embassy-net = { version = "0.4.0", features = ["defmt", "medium-ethernet", "dhcpv4", "proto-ipv4", "tcp", "udp", "dns"] }
esp-wifi = { version = "0.7.1", features = [
    "esp32s3",
    "wifi",
    "phy-enable-usb", # This is CRITICAL in order to not break USB functions
    "ps-max-modem",   # These are sleep modes. If not enabled, power dissipation skyrockets!
    #"ps-min-modem",  # They are mutually exclusive. min is to sleep
    "wifi-default",   # Brings common protocols such as tcp, udp, dns, dhcp
    "embassy-net", "async",
    "defmt",
], default-features = false }
rust-mqtt = { version = "0.3.0", default-features = false, features = ["defmt"] }

const_format = { version = "0.2.32" }
toml-cfg = { version = "0.2.0" }

imu-fusion = { version = "0.2.4" }
icm20948-async = { git = "https://github.com/peterkrull/icm20948-async" }
micromath = { version = "2.1.0" }
circular-buffer = { version = "0.1", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
