[package]
name = "test-xtensa-nostd"
version = "0.1.0"
authors = ["Luis Linares <linares.luis@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = ["esp32s3", "log"] }
esp-config = "0.1.0"
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.5.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }

esp-hal-embassy = { version = "0.4.0", features = [
    "esp32s3", "log",
    "integrated-timers"
] }
embassy-executor     = { version = "0.6.1", features = [
    "executor-interrupt", "executor-thread",
    "integrated-timers",
    "log", "task-arena-size-16384"
] }
embassy-embedded-hal = { version = "0.2.0" }
embassy-futures      = { version = "0.1.1" }
embassy-sync         = { version = "0.6.0" }
embassy-time         = { version = "0.3.1" }
embassy-time-driver  = { version = "0.1.0" }
embedded-hal         = { version = "1.0.0" }
embedded-hal-async   = { version = "1.0.0" }
embedded-hal-bus     = { version = "0.2.0" }
embedded-io          = { version = "0.6.1" }
embedded-io-async    = { version = "0.6.1" }

esp-hal-smartled = { git = "https://github.com/robamu/esp-hal-community.git", rev = "3562306", features = ["esp32s3"] }
smart-leds = "0.4.0"

embassy-net = { version = "0.4.0", features = ["dhcpv4", "dhcpv4-hostname", "proto-ipv4", "igmp", "tcp", "udp", "dns", "medium-ethernet", "log"] }
esp-wifi = { version = "0.10.1", features = ["esp32s3", "wifi", "phy-enable-usb", "ps-min-modem", "wifi-default", "embassy-net", "async", "log", "xtensa-lx-rt"] }
rust-mqtt = { version = "0.3.0", default-features = false }

const_format = { version = "0.2.32" }
toml-cfg = { version = "0.2.0" }

imu-fusion = { version = "0.2.4" }
icm20948-async = { git = "https://github.com/peterkrull/icm20948-async" }
micromath = { version = "2.1.0" }
circular-buffer = { version = "0.1", default-features = false }
xtensa-lx-rt = { version = "0.17.1", features = ["esp32s3", "float-save-restore"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
